WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249624
REGRESSION(
257823@main
): 4X Test262-test are constant failures
https://bugs.webkit.org/show_bug.cgi?id=249624
Summary
REGRESSION(257823@main): 4X Test262-test are constant failures
Michael Saboff
Reported
2022-12-19 17:24:38 PST
JSTests/test/built-ins/RegExp/named-groups/lookbehind.js is failing after
257823@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2022-12-19 17:26:00 PST
<
rdar://103537619
>
Michael Saboff
Comment 2
2022-12-19 17:27:30 PST
(In reply to Michael Saboff from
comment #0
)
> JSTests/test/built-ins/RegExp/named-groups/lookbehind.js is failing after >
257823@main
.
Actually this bug is for tracking the failures found in: est/language/literals/regexp/invalid-optional-lookbehind.js test/language/literals/regexp/invalid-optional-negative-lookbehind.js test/language/literals/regexp/invalid-range-lookbehind.js test/language/literals/regexp/invalid-range-negative-lookbehind.js
Michael Saboff
Comment 3
2022-12-19 18:03:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7892
Alexey Proskuryakov
Comment 4
2022-12-20 09:05:29 PST
Don't we already have bugs for this? I found
bug 249330
for one, and I feel like I saw a bug for the others, but cannot find it.
EWS
Comment 5
2022-12-20 09:21:43 PST
Committed
258139@main
(cc3bdd6f9825): <
https://commits.webkit.org/258139@main
> Reviewed commits have been landed. Closing PR #7892 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug