REGRESSION(257823@main): 4X Test262-test are constant failures https://bugs.webkit.org/show_bug.cgi?id=249624 rdar://103537619

Reviewed by Yusuke Suzuki.

As specified, RegExp lookbehinds do not allow for quantifiers.
This change fixes the Yarr parser to disallow Quantifiers for Lookbehinds and adds a new error if one
is specified.  The error message has the same text as V8.

Added a new test case and re-enabled the corresponding Test262 tests.

* JSTests/stress/regexp-lookbehind.js:
(testRegExpSyntaxError):
* JSTests/test262/config.yaml:
* Source/JavaScriptCore/yarr/YarrErrorCode.cpp:
(JSC::Yarr::errorMessage):
(JSC::Yarr::errorToThrow):
* Source/JavaScriptCore/yarr/YarrErrorCode.h:
* Source/JavaScriptCore/yarr/YarrParser.h:
(JSC::Yarr::Parser::parseEscape):
(JSC::Yarr::Parser::parseAtomEscape):
(JSC::Yarr::Parser::parseParenthesesBegin):
(JSC::Yarr::Parser::parseParenthesesEnd):
(JSC::Yarr::Parser::parseQuantifier):
(JSC::Yarr::Parser::parseTokens):

Canonical link: https://commits.webkit.org/258139@main